# optionalcpp

./: .clang-format  CMakeLists.txt  README.md
docs/: CNAME  Gemfile  _config.yml  about.markdown  index.markdown
docs/_posts/: 2021-12-01-welcome-to-jekyll.markdown  2021-12-05-what-is-optional.md  2021-12-12-basic-setup.md  2021-12-29-constructors.md  2022-01-02-class-invariants.md  2022-01-23-regular-optional.md  2022-02-13-equality-inequality.md  2022-02-20-order.md  2022-02-26-code-formatting.md  2022-03-06-copying.md  2022-03-20-const.md  2022-04-03-template.md  2022-05-01-value-by-reference.md  2022-05-27-enable-non-default-constructed-types.md  2022-05-28-a-new-destructor.md  2022-05-29-copy-constructor-strikes-back.md  2022-06-18-return-of-the-assignment.md  2022-06-26-copy-assignment-revisited.md  2022-07-17-pointer-syntax.md  2022-08-23-narrow-wide-contracts.md  2022-08-27-more-efficient-comparisons.md  2022-09-17-mutable-access.md  2022-09-18-cpp-98-optional-I.md  2022-10-02-cpp-98-optional-II.md  2023-01-29-cpp-98-optional-III.md  2023-02-05-swap.md  2023-02-24-reset.md  2023-04-30-nullopt.md  2023-05-13-globals.md  2023-11-18-comments.md
include/: optional.hpp
tests/: tests.cpp
